Cleaning Deprecated JDK API from quarkus core
Replaced Class.newInstance() with Class.getDeclaredConstructor().newInstance() as recommended
Replaced new Provider("DISABLED", 1, "DISABLED") with new Provider("DISABLED", "1.0", "DISABLED") as recommended

Signed-off-by: Adler Fleurant <2609856+AdlerFleurant@users.noreply.github.com>